# yur-paintboard

./: .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20221231_000001_create_auth_table.rs  m20221231_000001_create_user_table.rs  m20221231_000002_create_board_table.rs  m20221231_000002_create_session_table.rs  m20221231_000003_create_board_table.rs  m20230106_000004_create_paint_table.rs  m20230126_000001_create_board_table.rs  m20230126_000002_create_paint_table.rs  main.rs
src/: channel.rs  consts.rs  lib.rs  main.rs  paint.rs  pixel.rs  save.rs
src/entities/: auth.rs  board.rs  mod.rs  paint.rs  prelude.rs  session.rs
src/routers/: auth.rs  mod.rs  ws.rs
src/routers/auth/: auth.rs  check.rs  verify.rs
src/routers/http/: check.rs  mod.rs
src/routers/ws/: mod.rs  read.rs  write.rs
src/ws/: mod.rs  read.rs
