[package]
name = "yur-paintboard"
version = "0.1.0"
authors = ["yurzhang <yurzhang@163.com>"]
edition = "2021"
default-run = "yur-paintboard"

[profile.release]
strip = true
lto = true

[dependencies]
uuid = "1.2.2"
chrono = "0.4.23"
zstd = "0.12.1"
image = "0.24.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }
parking_lot = "0.12.1"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["macros", "sync", "parking_lot"] }
reqwest = { version = "0.11.13", features = ["rustls-tls-webpki-roots"] }
axum = { version = "0.6.1", features = ["http2", "ws"] }

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["parking_lot"] }

[dependencies.sea-orm]
version = "0.10.6"
features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
]
