[package]
name = "yur-paintboard"
version = "0.1.1"
authors = ["yurzhang <yurzhang@163.com>"]
edition = "2021"
default-run = "yur-paintboard"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
lazy_static = "1.4.0"
uuid = "1.2.2"
chrono = "0.4.23"
zstd = "0.12.1"
image = "0.24.5"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }
parking_lot = "0.12.1"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["macros", "sync", "parking_lot"] }

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["parking_lot"] }

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["rustls-tls-webpki-roots"]

[dependencies.sea-orm]
version = "0.10.6"
features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
]

[dependencies.axum]
version = "0.6.1"
default-features = false
features = [
  "http2",
  "json",
  "ws",
]
