[package]
name = "yur-paintboard"
version = "0.1.1"
authors = ["yurzhang <yurzhang@163.com>"]
edition = "2021"
default-run = "yur-paintboard"

[workspace]
members = [".", "migration"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.69"
lazy_static = "1.4.0"
zstd = "0.12.3"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
clap = { version = "4.1.6", features = ["derive"] }
parking_lot = "0.12.1"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "sync", "parking_lot"] }

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["parking_lot"] }

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = ["clock", "std"]

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["webp"]

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = ["rustls-tls-webpki-roots"]

[dependencies.sea-orm]
version = "0.11.0"
default-features = false
features = [
  "macros",
  "with-chrono",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
]

[dependencies.axum]
version = "0.6.8"
default-features = false
features = [
  "http1",
  "json",
  "tokio",
  "ws",
]
